--- a/MU-puzzle.ipynb
+++ b/MU-puzzle.ipynb
@@ -14,7 +14,18 @@
     "**Rule 3** if III : III -> U allowed.\n",
     "**Rule 4** if UU : UU -> _ allowed (deletion).\n",
     "\n",
-    "These rules constrain possible updates, but are not necessary."
+    "These rules constrain possible updates, but are not necessary.\n",
+    "\n",
+    "Let S\n",
+    "\n",
+    "Let M = 0, I = 1, & U = 2.\n",
+    "\n",
+    "Let $S_{0}$ = \\begin{pmatrix}1\\cr2\\cr\\end{pmatrix} and Let $S_{f}$ = \\begin{pmatrix}1\\cr3\\cr\\end{pmatrix}\n",
+    "\n",
+    "If S[n][-1] = 1\n",
+    " [Finish rules.]\n",
+    "\n",
+    "[Consider "
    ]
   },
   {
